compiler-core/src/luau/snapshots/gleam_core__luau__tests__literals.snap
---
source: compiler-core/src/luau/tests.rs
expression: "\npub fn literals() {\n  1\n  1.2\n  \"hello\"\n  \"hello\\nworld\"\n}\n"
---
----- SOURCE CODE

pub fn literals() {
  1
  1.2
  "hello"
  "hello\nworld"
}


----- COMPILED LUAU
local function literals()
  1
  1.2
  "hello"
  return "hello\\nworld"
end

return {
  literals = literals
}
