compiler-core/src/luau/snapshots/gleam_core__luau__tests__panics_and_todos.snap
---
source: compiler-core/src/luau/tests.rs
expression: "\npub fn let_test() {\n  todo\n  panic\n}\n"
---
----- SOURCE CODE

pub fn let_test() {
  todo
  panic
}


----- COMPILED LUAU
local function let_test()
  error("`todo` expression evaluated. This code has not yet been implemented.")
  return error("`panic` expression evaluated.")
end

return {
  let_test = let_test
}
